--- a/AndroidApp/AndroidManifest.xml
+++ b/AndroidApp/AndroidManifest.xml
@@ -9,6 +9,10 @@
     <uses-sdk
         android:minSdkVersion="10"
         android:targetSdkVersion="17" />
+ 
+        
+        <uses-permission android:name="android.permission.RECORD_AUDIO" />
+    	<uses-permission android:name="android.permission.MODIFY_AUDIO_SETTINGS"/>
 
     <application
         android:allowBackup="true"
