--- a/AndroidApp/AndroidManifest.xml
+++ b/AndroidApp/AndroidManifest.xml
@@ -22,6 +22,10 @@
                 
         <uses-library android:name="com.android.future.usb.accessory" />
         
+        <service 
+            android:name="com.mollocer.blinkwithmusic.BlinkService">            
+        </service>
+        
         <activity
             android:name="com.mollocer.blinkwithmusic.MainActivity"
             android:label="@string/app_name" >
